fix(ffe-form): endrer størrelse og alignment i tooltip

--- a/packages/ffe-form/less/input-group.less
+++ b/packages/ffe-form/less/input-group.less
@@ -33,4 +33,13 @@
             height: initial;
         }
     }
+
+    &__header {
+        margin: 0;
+
+        .ffe-tooltip__icon {
+            margin-left: var(--ffe-spacing-xs);
+            transform: translateY(var(--ffe-spacing-2xs));
+        }
+    }
 }
